<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnFavorito"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favorito_desc"
        android:scaleType="fitCenter"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="70dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_border"
        app:tint="#D4AF37"  />

    <ImageView
        android:id="@+id/ivSigno"
        android:layout_width="354dp"
        android:layout_height="354dp"
        android:contentDescription="@string/horoscope_sign_icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_aries" />

    <TextView
        android:id="@+id/tvNombreSigno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/ivSigno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/aries_nombre" />

    <TextView
        android:id="@+id/tvFechas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvNombreSigno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/aries_fechas" />

</androidx.constraintlayout.widget.ConstraintLayout>
