<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.DetalleHoroscopoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMensajeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivFondoMensaje"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_fortune1"
            android:contentDescription="@string/imagen_fondo_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="150dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/ivFondoMensaje"
            app:layout_constraintEnd_toEndOf="@id/ivFondoMensaje"
            app:layout_constraintStart_toStartOf="@id/ivFondoMensaje"
            app:layout_constraintTop_toTopOf="@id/ivFondoMensaje">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:id="@+id/mensajeScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingLeft="28dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:scrollbars="none">

                    <TextView
                        android:id="@+id/tvMensajeHoroscopo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="italic|bold"
                        android:layout_gravity="center_vertical"
                        tools:text="Cargando horóscopo..." />

                </ScrollView>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTituloSigno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cáncer (21 Jun - 22 Jul)" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPeriodoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloSigno">

        <ImageButton
            android:id="@+id/btnDia"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/periodo_dia_desc"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_filled"
            app:tint="#D4AF37" />

        <TextView
            android:id="@+id/tvDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Día"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnDia"
            app:layout_constraintEnd_toEndOf="@id/btnDia"
            app:layout_constraintStart_toStartOf="@id/btnDia"
            app:layout_constraintTop_toTopOf="@id/btnDia" />

        <ImageButton
            android:id="@+id/btnSemana"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/periodo_semana_desc"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/btnDia"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_filled"
            app:tint="#D4AF37" />

        <TextView
            android:id="@+id/tvSemana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Semana"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnSemana"
            app:layout_constraintEnd_toEndOf="@id/btnSemana"
            app:layout_constraintStart_toStartOf="@id/btnSemana"
            app:layout_constraintTop_toTopOf="@id/btnSemana" />

        <ImageButton
            android:id="@+id/btnMes"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/periodo_mes_desc"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/btnSemana"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_filled"
            app:tint="#D4AF37" />

        <TextView
            android:id="@+id/tvMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mes"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnMes"
            app:layout_constraintEnd_toEndOf="@id/btnMes"
            app:layout_constraintStart_toStartOf="@id/btnMes"
            app:layout_constraintTop_toTopOf="@id/btnMes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>